# hit_card

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
cmake/: ASCompilerDefenses.cmake  ASCompilerOptimizations.cmake  ASCompilerOptions.cmake  ASDetectCXXCompiler.cmake  ASExtraTargets.cmake  ASFindBoost.cmake  ASFindCeres.cmake  ASFindEigen.cmake  ASFindHIK.cmake  ASFindLibsGUI.cmake  ASFindLog.cmake  ASFindMvCamera.cmake  ASFindOPT.cmake  ASFindPlxApi.cmake  ASFindSWL.cmake  ASFindSqlite.cmake  ASFindSuitesparse.cmake  ASFindVTK.cmake  ASFindYAML.cmake  ASFindg2o.cmake  ASFindgflags.cmake  ASFindglog.cmake  ASGenConfig.cmake  ASGenHeaders.cmake  ASInstallLayout.cmake  ASModule.cmake  ASPCHSupport.cmake  ASUtils.cmake  ASVersion.cmake
cmake/checks/: cpu_avx512.cpp  cpu_avx512common.cpp  cpu_avx512skx.cpp  cpu_sse41.cpp  cpu_vsx.cpp  cpu_vsx3.cpp  cpu_vsx_asm.cpp  lapack_check.cpp
cmake/templates/: AS-abi.mk.in  AS.mk.in  ASConfig-ANDROID.cmake.in  ASConfig-CUDA.cmake.in  ASConfig-IPPICV.cmake.in  ASConfig-IPPIW.cmake.in  ASConfig-version.cmake.in  ASConfig.cmake.in  ASConfig.root-ANDROID.cmake.in  ASConfig.root-WIN32.cmake.in  as-XXX.pc.in  as_abi.xml.in  as_cpu_config.h.in  as_modules.hpp.in  as_run_all_tests_android.sh.in  as_run_all_tests_unix.sh.in  as_run_all_tests_windows.cmd.in  asconfig.h.in  cmake_uninstall.cmake.in  dllmain.cpp.in  setup_vars_linux.sh.in  setup_vars_macosx.sh.in  setup_vars_win32.cmd.in  vs_version.rc.in
inifile/: CommonConfig.ini  LogIniFile.ini  cameraPara.yml
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/include/as/: AOIAlgorithmParam.hpp  AOIDetectRes.hpp  ApertureDef.hpp  BaseBoardCore.hpp  CADCore.hpp  CalibrationData.hpp  CameraCore.hpp  CommonCore.hpp  ComponentCore.hpp  ConveyorParaCore.hpp  CoorTrans.hpp  ErrorCode.hpp  ErrorLevel.hpp  FovDetectParam.hpp  LumenDef.hpp  MacType.hpp  MachineHeadCore.hpp  MarkCore.hpp  MessageCore.hpp  MountMachineCore.hpp  PadCore.hpp  ProduceConditionCore.hpp  ProduceDataCore.hpp  ProjectorDef.hpp  RangeCore.hpp  ReconstructData.hpp  SPIAlgorithmParam.hpp  SPIDetectRes.hpp  StateMachineCore.hpp  core.hpp  pfm.hpp
modules/core/include/as/core/: Color.hpp  DefectDef.hpp  DetectDef.hpp  base.hpp  def.h  version.hpp
modules/core/include/as/core/hal/: interface.h
modules/core/include/as/core/imgproc/: 3DDef.hpp  ASPoint.hpp  ASRect.hpp  CPointCloud.hpp  ImageBuffer.hpp  ImageData.hpp  MarkFidResult.hpp
modules/core/src/: AOIAlgorithmParam.cpp  ApertureDef.cpp  BaseBoardCore.cpp  CADCore.cpp  CalibrationData.cpp  CommonCore.cpp  ComponentCore.cpp  ConveyorParaCore.cpp  CoorTrans.cpp  DefectDef.cpp  DetectDef.cpp  ErrorLevel.cpp  MacType.cpp  MachineHeadCore.cpp  MarkCore.cpp  MessageCore.cpp  MountMachineCore.cpp  PadCore.cpp  ProduceConditionCore.cpp  ProduceDataCore.cpp  RangeCore.cpp  SPIAlgorithmParam.cpp  SPIDetectRes.cpp  StateMachineCore.cpp  core.cpp  pfm.cpp
modules/data/: CMakeLists.txt
modules/data/include/as/: ASContext.hpp  ImportPadData.hpp  IniPara.hpp  data.hpp
modules/data/src/: ASContext.cpp  ImportPadData.cpp  IniPara.cpp  data.cpp
modules/database/: CMakeLists.txt
modules/database/include/as/: DBUtils.hpp  ErrorLevelDao.hpp  ErrorLevelImpl.hpp  LimitXYImpl.hpp  MessageDao.hpp  MessageImpl.hpp  RangeDao.hpp  RangeImpl.hpp  Rangelmpl.hpp  database.hpp  format.hpp  format.inl.hpp  score.hpp  sqlite3.hpp
modules/database/src/: DBUtils.cpp  ErrorLevelImpl.cpp  LimitXYImpl.cpp  MessageImpl.cpp  RangeImpl.cpp  database.cpp
modules/database/src/db/: Authority.db  MechDB.db  MessageDB.db  RangeDB.db
modules/gui/: CMakeLists.txt
modules/gui/include/as/: gui.hpp
modules/gui/include/as/CGraphic/: CGraphic.hpp  CGraphicManager.h
modules/gui/src/: gui.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
modules/gui/src/CGraphic/: CGraphic.cpp  CGraphicManager.cpp
modules/gui/src/items/: TreeModel.cpp  TreeModel.h  VisGraphicsScene.cpp  VisGraphicsScene.h  VisGraphicsView.cpp  VisGraphicsView.h  items_global.h
modules/gui/src/module/common/: CommonPart.cpp  CommonPart.h
modules/gui/src/module/edit/: BenchmarkDialog.cpp  BenchmarkDialog.h  BenchmarkDialog.ui
modules/gui/src/module/file/: ImportCADDialog.cpp  ImportCADDialog.h  ImportCADDialog.ui
modules/gui/src/res/: SpiStyleSheet.qss
modules/gui/src/utils/include/: AutoLoadQss.h  GraphBase.hpp  ImageTransform.hpp
modules/gui/src/utils/src/: AutoLoadQss.cpp  GraphBase.cpp  ImageTransform.cpp
modules/io/: CMakeLists.txt
modules/io/include/as/: LogManager.hpp  io.hpp
modules/io/src/: LogManager.cpp  io.cpp
modules/process/: CMakeLists.txt
modules/process/include/as/: MainWindowProcess.hpp  process.hpp
modules/process/include/as/common/: CommonProcess.h  UiCallback.h
modules/process/include/as/edit/: BenchmarkProcess.hpp
modules/process/include/as/file/: CADImportProcess.hpp
modules/process/src/: MainWindowProcess.cpp  process.cpp
modules/process/src/common/: CommonProcess.cpp  UiCallback.cpp
modules/process/src/edit/: BenchmarkProcess.cpp
modules/process/src/file/: CADImportProcess.cpp
